react-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-service
spec:
  selector:
    app: react-app
  ports:
  - protocol: TCP
    port: 5173
    targetPort: 5173
